# fulcra-api-python

./: .gitignore  pyproject.toml
fulcra_api/: core.py
tests/: conftest.py  test_auth_code_flow.py  test_basic.py
