[project]
name = "fulcra-api"
version = "0.1.30"
description = "Python client library for Context by Fulcra"
authors = [
    {name = "Brandon Creighton", email = "brandon@fulcradynamics.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5,<3",
    "pyarrow>=19.0.0",
    "numpy>=2.0.0",
    "requests>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]
dev  = ["ruff"]
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-material>=9.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fulcra_api"]
